--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 	<title>Layout Mate Academy</title>
 	<link rel="stylesheet" href="css\style-body.css">
 	<link rel="stylesheet" href="css\style-text.css">
-	<link rel="stylesheet" href="css\style-anker.css">
 	<link rel="stylesheet" href="css\style-header.css">
+	<!-- <link rel="stylesheet" href="css\style-list.css"> -->
+	<!-- <link rel="stylesheet" href="css\style-anker.css"> -->
 </head>
 
 <body>
@@ -21,10 +22,14 @@
 					<p>A great new free psd theme to showcase your new application.</p>
 					<div class="main-nav">
 						<ul>
-							<li class="operation-sistems apple"><a href="#" target="blank" title="apple">apple</a></li>
-							<li class="operation-sistems android"><a href="#" target="blank" title="android">android</a>
+							<li class="operation-sistems">
+								<a class="apple" href="#" target="blank" title="apple"></a>
 							</li>
-							<li class="operation-sistems windows"><a href="#" target="blank" title="windows">windows</a>
+							<li class="operation-sistems">
+								<a class="android" href="#" target="blank" title="android"></a>
+							</li>
+							<li class="operation-sistems windows">
+								<a class="windows" href="#" target="blank" title="windows"></a>
 							</li>
 						</ul>
 					</div>
@@ -80,10 +85,11 @@
 			</section>
 
 			<section>
-				 <p><q>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris interdum velit vitae
-					nulla molestie eu commodo nulla dapib us. Donec id sollicitudin urna. Integer at dui ac leo fermentum
-					varius eleifend ut.</q></p> 
-					
+				<p><q>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris interdum velit vitae
+						nulla molestie eu commodo nulla dapib us. Donec id sollicitudin urna. Integer at dui ac leo
+						fermentum
+						varius eleifend ut.</q></p>
+
 				<p>
 					<b>Jane Hunt</b>
 				</p>
