--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css\style-body.css">
 	<link rel="stylesheet" href="css\style-text.css">
 	<link rel="stylesheet" href="css\style-header.css">
-	<!-- <link rel="stylesheet" href="css\style-list.css"> -->
+	<link rel="stylesheet" href="css\main-content.css">
 	<!-- <link rel="stylesheet" href="css\style-anker.css"> -->
 </head>
 
@@ -28,7 +28,7 @@
 							<li class="operation-sistems">
 								<a class="android" href="#" target="blank" title="android"></a>
 							</li>
-							<li class="operation-sistems windows">
+							<li class="operation-sistems">
 								<a class="windows" href="#" target="blank" title="windows"></a>
 							</li>
 						</ul>
