--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="css\style-text.css">
 	<link rel="stylesheet" href="css\style-header.css">
 	<link rel="stylesheet" href="css\main-content.css">
+	<link rel="stylesheet" href="css\style-footer.css">
 	<!-- <link rel="stylesheet" href="css\style-anker.css"> -->
 </head>
 
@@ -17,7 +18,7 @@
 		<!-- Главная шапка страницы. Начало -->
 		<header>
 			<div class="banner">
-				<div class="banner-left">
+				<div class="conteiner-banner">
 					<h1>Notify<span>.</span></h1>
 					<p>A great new free psd theme to showcase your new application.</p>
 					<div class="main-nav">
@@ -40,27 +41,27 @@
 
 		<!-- Основное содержимое страницы. Начало -->
 		<main>
-			<nav class="features">
+			<nav class="features container clearfix">
 				<ul>
 					<li class="feature-item">
-						<a href="#" target="blank" title="Editable Theme">
-							<div class="feature-item-icon">icon</div>
+						<a class="feature-item-icon" href="#" target="blank" title="Editable Theme">
+							<div class="gear"></div>
 						</a>
 						<h2 class="nav-title">Editable Theme</h2>
 						<p class="nav-title-note">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
 							fringilla fringilla</p>
 					</li>
 					<li class="feature-item">
-						<a href="#" target="blank" title="Flat Design">
-							<div class="feature-item-icon">icon</div>
+						<a class="feature-item-icon" href="#" target="blank" title="Flat Design">
+							<div class="star"></div>
 						</a>
 						<h2 class="nav-title">Flat Design</h2>
 						<p class="nav-title-note">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
 							fringilla fringilla</p>
 					</li>
 					<li class="feature-item">
-						<a href="#" target="blank" title="">
-							<div class="feature-item-icon">icon</div>
+						<a class="feature-item-icon" href="#" target="blank" title="">
+							<div class="planet"></div>
 						</a>
 						<h2 class="nav-title">Reach Your Audience</h2>
 						<p class="nav-title-note">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
@@ -68,8 +69,8 @@
 					</li>
 				</ul>
 			</nav>
-			<section>
-				<div class="form-block block">
+			<section class="form-video-block container clearfix">
+				<div class="form-section section-column">
 					<h2 class="form-title">Get Notified Of Any Updates!</h2>
 					<p class="form-title-note">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
 						fringilla fringilla nisl
@@ -81,10 +82,18 @@
 						<input type="submit" value="Notify">
 					</form>
 				</div>
-				<div class="video-block block"></div>
+				<div class="video-section section-column">
+					<div class="video">
+						<video width="500" height="310" controls>
+							<source src="video/Karlson.mp4" type="video/mp4">
+							<source src="video/Karlson.webm" type="video/webm">
+							<iframe width="500" height="310" src="https://youtu.be/QeTAPcarNz8" frameborder="0" allowfullscreen></iframe>
+							</video>
+					</div>
+				</div>
 			</section>
 
-			<section>
+			<section class="container">
 				<p><q>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris interdum velit vitae
 						nulla molestie eu commodo nulla dapib us. Donec id sollicitudin urna. Integer at dui ac leo
 						fermentum
@@ -94,35 +103,40 @@
 					<b>Jane Hunt</b>
 				</p>
 
-				<div class="portrait"><a href="#" target="_blank"><img src="" alt="portrait"></a></div>
-				<div class="portrait"><a href="#" target="_blank"><img src="" alt="portrait"></a></div>
-				<div class="portrait"><a href="#" target="_blank"><img src="" alt="portrait"></a></div>
-				<div class="portrait"><a href="#" target="_blank"><img src="" alt="portrait"></a></div>
-				<div class="portrait"><a href="#" target="_blank"><img src="" alt="portrait"></a></div>
-				<div class="portrait"><a href="#" target="_blank"><img src="" alt="portrait"></a></div>
-				<div class="portrait"><a href="#" target="_blank"><img src="" alt="portrait"></a></div>
-				<div class="portrait"><a href="#" target="_blank"><img src="" alt="portrait"></a></div>
-				<div class="portrait"><a href="#" target="_blank"><img src="" alt="portrait"></a></div>
-				<div class="portrait"><a href="#" target="_blank"><img src="" alt="portrait"></a></div>
-				<div class="portrait"><a href="#" target="_blank"><img src="" alt="portrait"></a></div>
-				<div class="portrait"><a href="#" target="_blank"><img src="" alt="portrait"></a></div>
-				<div class="portrait"><a href="#" target="_blank"><img src="" alt="portrait"></a></div>
-				<div class="portrait"><a href="#" target="_blank"><img src="" alt="portrait"></a></div>
-				<div class="portrait"><a href="#" target="_blank"><img src="" alt="portrait"></a></div>
-				<div class="portrait"><a href="#" target="_blank"><img src="" alt="portrait"></a></div>
-				<div class="portrait"><a href="#" target="_blank"><img src="" alt="portrait"></a></div>
-				<div class="portrait"><a href="#" target="_blank"><img src="" alt="portrait"></a></div>
-				<div class="portrait"><a href="#" target="_blank"><img src="" alt="portrait"></a></div>
-				<div class="portrait"><a href="#" target="_blank"><img src="" alt="portrait"></a></div>
+
+				<div class="flex">
+					<a class="portrait" href="#" target="_blank"><img src="images/person1.jpg" alt="portrait"></a>
+					<a class="portrait" href="#" target="_blank"><img src="images/person2.jpg" alt="portrait"></a>
+					<a class="portrait" href="#" target="_blank"><img src="images/person3.jpg" alt="portrait"></a>
+					<a class="portrait" href="#" target="_blank"><img src="images/person4.jpg" alt="portrait"></a>
+					<a class="portrait" href="#" target="_blank"><img src="images/person5.jpg" alt="portrait"></a>
+					<a class="portrait" href="#" target="_blank"><img src="images/person6.jpg" alt="portrait"></a>
+					<a class="portrait" href="#" target="_blank"><img src="images/person7.jpg" alt="portrait"></a>
+					<a class="portrait" href="#" target="_blank"><img src="images/person8.jpg" alt="portrait"></a>
+					<a class="portrait" href="#" target="_blank"><img src="images/person9.jpg" alt="portrait"></a>
+					<a class="portrait" href="#" target="_blank"><img src="images/person10.jpg" alt="portrait"></a>
+					<a class="portrait" href="#" target="_blank"><img src="images/person11.jpg" alt="portrait"></a>
+					<a class="portrait" href="#" target="_blank"><img src="images/person12.jpg" alt="portrait"></a>
+					<a class="portrait" href="#" target="_blank"><img src="images/person13.jpg" alt="portrait"></a>
+					<a class="portrait" href="#" target="_blank"><img src="images/person14.jpg" alt="portrait"></a>
+					<a class="portrait" href="#" target="_blank"><img src="images/person15.jpg" alt="portrait"></a>
+					<a class="portrait" href="#" target="_blank"><img src="images/person16.jpg" alt="portrait"></a>
+					<a class="portrait" href="#" target="_blank"><img src="images/person17.jpg" alt="portrait"></a>
+					<a class="portrait" href="#" target="_blank"><img src="images/person18.jpg" alt="portrait"></a>
+					<a class="portrait" href="#" target="_blank"><img src="images/person19.jpg" alt="portrait"></a>
+					<a class="portrait" href="#" target="_blank"><img src="images/person20.jpg" alt="portrait"></a>
+				</div>
+
 				<h2 class="contact-title">Say Hi & Get in Touch</h2>
 				<p class="contact-note">Lorem ipsum dolor sit amet, consectetur adipiscing elit suspendisse.</p>
+
 				<div class="social">
-					<a class="social-btn" href="#" target="_blank">twitter</a>
-					<a class="social-btn" href="#" target="_blank">facebook</a>
-					<a class="social-btn" href="#" target="_blank">pinterest</a>
-					<a class="social-btn" href="#" target="_blank">google +</a>
-					<a class="social-btn" href="#" target="_blank">linkedin</a>
-					<a class="social-btn" href="#" target="_blank">youtube</a>
+					<a class="social-btn" href="#" target="_blank"></a>
+					<a class="social-btn" href="#" target="_blank"></a>
+					<a class="social-btn" href="#" target="_blank"></a>
+					<a class="social-btn" href="#" target="_blank"></a>
+					<a class="social-btn" href="#" target="_blank"></a>
+					<a class="social-btn" href="#" target="_blank"></a>
 				</div>
 			</section>
 		</main>
@@ -130,16 +144,16 @@
 
 		<!-- Подвал. Начало -->
 		<footer>
-
-			<ul class="footer-nav">
-				<li><a href="#" target="_blank">Contact</a></li>
-				<li> <a href="#" target="_blank">Download</a></li>
-				<li> <a href="#" target="_blank">Press</a></li>
-				<li> <a href="#" target="_blank">Email</a></li>
-				<li> <a href="#" target="_blank">Support</a></li>
-				<li> <a href="#" target="_blank">Privacy Policy</a></li>
-			</ul>
-
+			<div class="container">
+				<ul class="footer-nav">
+					<li><a href="#" target="_blank">Contact</a></li>
+					<li> <a href="#" target="_blank">Download</a></li>
+					<li> <a href="#" target="_blank">Press</a></li>
+					<li> <a href="#" target="_blank">Email</a></li>
+					<li> <a href="#" target="_blank">Support</a></li>
+					<li> <a href="#" target="_blank">Privacy Policy</a></li>
+				</ul>
+			</div>
 		</footer>
 		<!-- Подвал. Конец. -->
 	</div>
